k8s/redis-node-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-node-ip-service
spec:
  type: NodePort
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
