k8s/relay-node-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: relay-node-ip-service
spec:
  type: NodePort
  selector:
    component: web
  ports:
    - port: 8030
      targetPort: 8030
      protocol: TCP
