k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ld-relay-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: ld-relay-nginx-ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          backend:
            serviceName: relay-node-ip-service
            servicePort: 8030
